--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -27,11 +27,12 @@ node {
 
                     echo "----- Prepare workspace ------"
                     rm -rf workspace
-                    mkdir workspace
+                    #mkdir workspace
+                    iectl publisher workspace init
                     cd workspace
 
-                    echo "----- init workspace and copy app files -----"
-                    #iectl publisher workspace init
+                    echo "----- Copy app files -----"
+                    
                     cd ..
                     cp -RT $PROJECT_PATH_PREFIX/app ./workspace
                     cd workspace
