--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -27,8 +27,8 @@ node {
 
                     echo "----- Prepare workspace ------"
                     rm -rf workspace
-                    mkdir workspace
-                    #iectl publisher workspace init
+                    #mkdir workspace
+                    iectl publisher workspace init
                     cd workspace
 
                     echo "----- Copy app files -----"
@@ -40,17 +40,55 @@ node {
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
 
+
+
+
+
+
+
+
+
+
                     echo "----- Create new app version ------"
                     # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
-                    iectl publisher app-project version create \
-                        -a "$APP_ID" \
-                        -v "0.0.${BUILD_NUMBER}" \
-                        -y "$PROJECT_PATH_PREFIX/app/docker-compose.prod.yml" \
+                    iectl publisher standalone-app create \
+                        --appname "$APP_NAME" \
+                        --changelogs "REEEEEEEEEEEEEE" \
+                        --yamlpath "$PROJECT_PATH_PREFIX/app/docker-compose.prod.yml" \
+                        --versionnumber "0.0.${BUILD_NUMBER}" \
                         -n '{"JenkinsCICD-Demo":[{"name":"JenkinsCICD-Demo","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
                         -s 'JenkinsCICD-Demo' \
                         -t 'FromBoxReverseProxy' \
                         -u 'JenkinsCICD-Demo' \
                         -r '/'
+
+
+
+                    iectl publisher app-project upload catalog \
+                      --appname $APP_NAME \
+                      -v "0.0.${BUILD_NUMBER}"
+
+                    #iectl publisher standalone-app version export --appname "myapp" --versionnumber "0.0.1" --exportpath "sample_export_path"
+                    #iectl iem catalog import-application --app-file-path "sample_export_path/myapp.app"
+
+
+
+
+
+
+
+
+                    #echo "----- Create new app version ------"
+                    # I have used BUILD_NUMBER from Jenkins to create versions. If the apps are being deployed differentley as well you would need to get the version via "app-details" \
+                    #iectl publisher app-project version create \
+                    #    -a "$APP_ID" \
+                    #    -v "0.0.${BUILD_NUMBER}" \
+                    #    -y "$PROJECT_PATH_PREFIX/app/docker-compose.prod.yml" \
+                    #    -n '{"JenkinsCICD-Demo":[{"name":"JenkinsCICD-Demo","protocol":"HTTP","port":"80","headers":"","rewriteTarget":"/"}]}' \
+                    #    -s 'JenkinsCICD-Demo' \
+                    #    -t 'FromBoxReverseProxy' \
+                    #    -u 'JenkinsCICD-Demo' \
+                    #   -r '/'
                     
                     echo "----- Deploy on edge device ------"
                     iectl iem app-project install \
