--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -33,9 +33,9 @@ node {
 
                     echo "----- Copy app files -----"
                     
-                    cd ..
-                    cp -RT $PROJECT_PATH_PREFIX/app ./workspace
-                    cd workspace
+                    #cd ..
+                    #cp -RT $PROJECT_PATH_PREFIX/app ./workspace
+                    #cd workspace
 
                     echo "----- IEM Login ------"
                     iectl config add iem --name 'iemdev' --url "$IEM_URL" --user "$USER_NAME" --password "$PSWD"
@@ -68,7 +68,10 @@ node {
                       --appname $APP_NAME \
                       -v "0.0.${BUILD_NUMBER}"
 
-                    #iectl publisher standalone-app version export --appname "myapp" --versionnumber "0.0.1" --exportpath "sample_export_path"
+                    #iectl publisher standalone-app version export \
+                    #    --appname "myapp" \
+                    #    --versionnumber "0.0.1" \
+                    #    --exportpath "sample_export_path"
                     #iectl iem catalog import-application --app-file-path "sample_export_path/myapp.app"
 
 
