--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -27,12 +27,10 @@ node {
 
                     echo "----- Prepare workspace ------"
                     rm -rf workspace
-                    #mkdir workspace
                     iectl publisher workspace init
                     cd workspace
 
-                    echo "----- Copy app files -----"
-                    
+                    #echo "----- Copy app files -----"
                     #cd ..
                     #cp -RT $PROJECT_PATH_PREFIX/app ./workspace
                     #cd workspace
@@ -68,22 +66,17 @@ node {
                         --user "$USER_NAME" \
                         --password "$PSWD"
 
-                    iectl publisher app-project upload catalog \
-                      --appname $APP_NAME \
-                      -v "0.0.${BUILD_NUMBER}"
+                    #iectl publisher app-project upload catalog \
+                    #  --appname $APP_NAME \
+                    # -v "0.0.${BUILD_NUMBER}"
 
-
-
-
-
-
-
-
-                    #iectl publisher standalone-app version export \
-                    #    --appname "myapp" \
-                    #    --versionnumber "0.0.1" \
-                    #    --exportpath "sample_export_path"
-                    #iectl iem catalog import-application --app-file-path "sample_export_path/myapp.app"
+                    iectl publisher standalone-app version export \
+                        --appname "myapp" \
+                        --versionnumber "0.0.1" \
+                        --exportpath "sample_export_path"
+                    
+                    iectl iem catalog import-application \
+                        --app-file-path "sample_export_path/myapp.app"
 
 
 
