no cd workspace

--- a/src/optA-Shell-script/Jenkinsfile
+++ b/src/optA-Shell-script/Jenkinsfile
@@ -28,7 +28,7 @@ node {
                     echo "----- Prepare workspace ------"
                     rm -rf workspace
                     iectl publisher workspace init
-                    cd workspace
+                    #cd workspace
 
                     #echo "----- Copy app files -----"
                     #cd ..
