--- a/src/Jenkinsfile
+++ b/src/Jenkinsfile
@@ -53,6 +53,7 @@ node {
                     echo "----- Prepare workspace ------"
                     cp -RT src/app /app/src/workspace
                     cd /app/src/workspace
+                    tree
 
                     echo "----- Set publisher configuration ------"
                     iectl config add publisher --name "publisher-dind" --dockerurl "http://docker:2375" --workspace "./workspace"
