worong workspace definition

--- a/src/Jenkinsfile
+++ b/src/Jenkinsfile
@@ -55,7 +55,7 @@ node {
                     cd /app/src/workspace
 
                     echo "----- Set publisher configuration ------"
-                    iectl config add publisher --name "publisher-dind" --dockerurl "http://docker:2375" --workspace "./workspace"
+                    iectl config add publisher --name "publisher-dind" --dockerurl "http://docker:2375" --workspace "."
 
                     echo "----- IEM Login ------"
                     export IE_SKIP_CERTIFICATE=true
