--- a/src/dockerfile/dockerfile
+++ b/src/dockerfile/dockerfile
@@ -6,8 +6,8 @@ RUN apt-get update
 # These binaries can be downloaded from the IE-Hub
 # I installed the binaries in my local /bin folder and copied them from there into the saame folder as this dockerfile
 # The binaries aren't visible in the git repo as they are in the .gitignore file doe to their size
-#COPY ie-app-publisher-linux /usr/bin
-#RUN chmod +x /usr/bin/ie-app-publisher-linux
+COPY ie-app-publisher-linux /usr/bin
+RUN chmod +x /usr/bin/ie-app-publisher-linux
 COPY iectl /usr/bin
 RUN chmod +x /usr/bin/iectl
 
@@ -21,5 +21,5 @@ RUN apt-get update && apt-get install -y jq && rm -rf /var/lib/apt/lists/*
 
 # Create a workspace folder and initialize it with the ie-app-publisher
 RUN mkdir -p /app/src/workspace
-#WORKDIR /app/src/workspace
-#RUN ie-app-publisher-linux ws init
+WORKDIR /app/src/workspace
+RUN ie-app-publisher-linux ws init
