--- a/src/app/docker-compose.yml
+++ b/src/app/docker-compose.yml
@@ -2,9 +2,8 @@ version: '2.4'
 services:
   hello-edge:
     image: hello-edge
-    build: .
-    ports:
-      - '1234:80'
+    build:
+      context: ./web
     mem_limit: 200mb
     restart: always
     volumes:
