--- a/src/app/docker-compose.prod.yml
+++ b/src/app/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 services:
   hello-edge:
-    image: nginx:alpine
+    image: hello-edge
     mem_limit: 200mb
     restart: always
     volumes:
